# hexa

./: .gitignore  DESACOPLAMIENTO_CAMBIOS.md  DESACOPLAMIENTO_CAMBIOS_FINAL.md  DOCKER_COMPOSE_ANALYSIS.md  DOCKER_QUICK_GUIDE.md  FIX_REDIS_ERROR.md  GUIA_CELERY_TASKS.md  GUIA_TESTING.md  GUIA_TYPE_SAFE_SERVICE_LOCATOR.md  PROTOCOLS_COMPARTIDOS_GUIA.md  QUIEN_CREA_PROTOCOLS.md  README_TESTING.md  REDIS_FIX_APPLIED.md  TESTING_COMPLETE.md  TESTING_SUMMARY.md  compose.dev.yaml  compose.qa.yaml  docker-compose.yml  pyproject.toml  ruff.toml
backend/: .gitignore  ARCHITECTURE.md  CHANGELOG_SESSION.md  DEPENDENCY_INJECTION_FIX.md  LICENCE  README.md  TESTING_REPOSITORY_FIX.md  apply_docker_improvements.sh  auth.md  compose.dev.yaml  compose.dev.yaml.optimized  compose.qa.yaml  conftest.py  fix_all_controllers.py  fix_containers.py  fix_imports.py  generate_tests.py  main.py  main_minimal.py  main_simple.py  pyproject.toml  pyrefly.toml  ruff.toml  run_tests.sh  setup-host-docker-internal.sh  test_dependencies.py  test_system.py
backend/app/: container.py  models.py
backend/app/auth/: container.py
backend/app/module/: container.py
backend/app/user/: module.py
backend/app/user_relationships/: container.py
backend/app/user_relationships/application/: exception.py  service.py
backend/app/user_relationships/domain/: __init__.py  repository.py  usecase.py
backend/app/user_relationships/infra/: decorators.py
backend/app/user_relationships/shared/: decorators.py
backend/core/audit/: README.md  README_EXCLUSION.md  __init__.py  context.py  listeners.py  middleware.py  models.py
backend/core/celery/: __init__.py  discovery.py
backend/core/config/: modules.py  settings.py
backend/core/db/: __init__.py  redis_db.py  session.py  transactional.py
backend/core/exceptions/: __init__.py  authentication.py  base.py
backend/core/fastapi/dependencies/: __init__.py  logging.py  permission.py  require_permissions.py
backend/core/fastapi/middlewares/: __init__.py  authentication.py  permissions.py  response_log.py  sqlalchemy.py
backend/core/fastapi/server/: __init__.py  auth.http  container_config.py  route_config.py  route_helpers.py
backend/core/helpers/: password.py  token.py
backend/core/search/: README.md  __init__.py  filters.py  repository.py
backend/docker/hexa/: dev.Dockerfile  qa.Dockerfile
backend/docker/nginx/: default.dev.conf  default.qa.conf  qa.Dockerfile
backend/docs/: 01-getting-started.md  02-architecture.md  03-development-guide.md  04-dependency-injection.md  09-service-locator.md  10-route-injection.md  11-best-practices.md  12-tutorial.md  DOCUMENTATION_COMPLETE.md  INDEX.md  QUICK_START.md  README.md  REFACTORING_PHASE2_SUMMARY.md  REFACTORING_SUMMARY.md  index.html  swagger-ui.css
backend/docs/architecture/: 01-overview.md  02-project-structure.md  04-service-locator.md  05-module-simplification.md  decoupling-system.md  dependency-injection.md  design-patterns.md  hexagonal-principles.md
backend/docs/best-practices/: BEST_PRACTICES.md
backend/docs/commands/: sync-db.md
backend/docs/core/: 03-celery.md  04-permissions-decorator.md
backend/docs/deployment/: 01-environment.md  02-docker-production.md
backend/docs/development/: 01-first-time-setup.md  03-cli-commands.md
backend/docs/dynamic-modules/: auto-registration.md  creating-modules.md  inter-module-communication.md
backend/docs/examples/: permissions_usage.md
backend/docs/extras/: api-reference.md  best-practices.md  migration-guide.md  troubleshooting.md
backend/docs/modules/: 02-creating-module.md  README.md  auth.md  business-modules.md  file_storage.md  finance.md  invoicing.md  module-structure.md  module.md  procurement.md  provider.md  rbac.md  system-modules.md  taxes.md  user.md  user_relationships.md  yiqi_erp.md
backend/docs/quick-guides/: create-new-module.md
backend/docs/rbac/: implementation.md  permissions.md  roles.md
backend/docs/setup/: environment.md  installation.md  running.md
backend/hexa/: __main__.py
backend/migrations/: env.py
backend/migrations/versions/: 001_add_product_table.py
backend/modules/: LICENSE_ENTERPRISE  __init__.py  container.py  models.py
backend/modules/app_module/: container.py  module.py
backend/modules/auth/: container.py  module.py  register_services.py
backend/modules/auth/test/: conftest.py  test_auth_repository.py  test_auth_service.py  test_auth_usecase.py
backend/modules/email/: README.md  container.py  module.py
backend/modules/email/templates/: notification.html  password_reset.html  welcome.html
backend/modules/email/test/: example_usage.py
backend/modules/file_storage/: container.py  module.py
backend/modules/file_storage/test/: test_file_service.py  test_file_storage.py
backend/modules/finance/: container.py  module.py
backend/modules/finance/test/: conftest.py  test_finance_repository.py  test_finance_service.py  test_finance_usecase.py
backend/modules/inventory/: container.py  permissions.py  setup.py
backend/modules/invoicing/: container.py  module.py
backend/modules/invoicing/test/: __init__.py  conftest.py  test_purchase_invoice_repository.py  test_purchase_invoice_service.py  test_tasks.py  (+1 more)
backend/modules/module/: container.py  module.py
backend/modules/notification/: container.py  module.py
backend/modules/notifications/: container.py  module.py
backend/modules/provider/: container.py  module.py  permissions.py  setup.py
backend/modules/rbac/: container.py  module.py  permissions.py
backend/modules/taxes/: permissions.py  setup.py
backend/modules/user/: container.py  module.py  permissions.py  service.py
backend/modules/user_relationships/: container.py  module.py
backend/modules/yiqi_erp/: IMPROVEMENTS_SUMMARY.md  container.py  module.py
backend/shared/: README_MIXINS.md  container.py  dependencies.py  mixins.py  models.py  server.py
backend/shared/file_storage/: container.py
backend/shared/interfaces/: events.py  module_contracts.py  module_discovery.py  module_registry.py  service_locator.py  service_protocols.py  service_registry.py
(+544 files in other folders)
