[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dependency-injector>=4.46.0",
    "fastapi[all]>=0.115.12",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "sqlmodel>=0.0.24",
    "zeep>=4.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
