[project]
name = "fast-hexagonal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokeydb>=0.2.1",
    "aiopg[sa]>=1.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.46.0",
    "faker>=37.3.0",
    "fastapi[all]>=0.115.12",
    "psycopg-binary>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "sqlmodel>=0.0.24",
    "typer>=0.15.4",
    "zeep>=4.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[project.scripts]
hexa = "hexa.__main__:cmd"
