[project]
name = "fast-hexagonal"
version = "0.1.0"
description = "Add your description here."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiopg[sa]>=1.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "boto3>=1.39.4",
    "botocore>=1.39.4",
    "celery[librabbitmq]>=5.5.3",
    "dependency-injector>=4.46.0",
    "faker>=37.3.0",
    "fastapi[all]>=0.115.13",
    "flower>=2.0.1",
    "lazyops>=0.4.0",
    "minify-html>=0.18.1",
    "passlib>=1.7.4",
    "pika>=1.3.2",
    "psycopg-binary>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "redis[librabbitmq]>=4.6.0",
    "sqlmodel>=0.0.24",
    "typer>=0.15.4",
    "zeep>=4.3.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-rich>=0.2.0",
    "ruff>=0.11.10",
]

[tool.ruff]
src = ["."]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
# Global options:

# [tool.mypy]
# warn_return_any = true
# warn_unused_configs = true
# ignore_missing_imports = true

# Per-module/package settings
# [[tool.mypy.overrides]]
# module = "my_module.*"
# ignore_errors = true

# [[tool.mypy.overrides]]
# module = "another_package.sub_module"
# disallow_untyped_defs = true

# [tool.setuptools]
# packages = ["app", "core", "hexa"]
[tool.setuptools.packages.find]
where = ["."]
exclude = ["docker*", "migrations*", "docs*"]

# [tool.uv]
# package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    #"-n 0",                  # Desactiva ejecución paralela
    #"--max-asyncio-tasks=1",  # Solo 1 tarea asíncrona a la vez
    "--verbose",              # Opcional: muestra más detalles
    "--tb=short"             # Opcional: formato de tracebacks
]
pythonpath = [
  "."
]

[project.scripts]
hexa = "hexa.__main__:cmd"
