[project]
name = "fast-hexagonal"
version = "0.1.0"
description = "Add your description here."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=7.0.0",
    "aiopg[sa]>=1.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "boto3>=1.40.70",
    "botocore>=1.40.70",
    "celery[librabbitmq]>=5.5.3",
    "dependency-injector>=4.48.2",
    "faker>=37.12.0",
    "fastapi[all]>=0.115.13",
    "flower>=2.0.1",
    "lazyops>=0.4.5",
    "minify-html>=0.18.1",
    "pandas[excel]>=2.3.3",
    "passlib>=1.7.4",
    "pika>=1.3.2",
    "psycopg-binary>=3.2.12",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.9",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "redis[librabbitmq]>=4.6.0",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
    "zeep>=4.3.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-rich>=0.2.0",
    "ruff>=0.14.4",
]


[tool.ruff]
src = ["."]
extend = "../pyproject.toml"
include = [
    "pyproject.toml",
    "modules/**/*.py",
    "core/**/*.py",
    "shared/**/*.py",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F403", "E501"]
unfixable = ["F403"]
preview = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "tab"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false


[tool.ruff.lint.isort]
known-first-party = ["backend"]
# Global options:

# [tool.mypy]
# warn_return_any = true
# warn_unused_configs = true
# ignore_missing_imports = true

# Per-module/package settings
# [[tool.mypy.overrides]]
# module = "my_module.*"
# ignore_errors = true

# [[tool.mypy.overrides]]
# module = "another_package.sub_module"
# disallow_untyped_defs = true

# [tool.setuptools]
# packages = ["app", "core", "hexa"]
[tool.setuptools.packages.find]
where = ["."]
exclude = ["docker*", "migrations*", "docs*"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    #"-n 0",                  # Desactiva ejecución paralela
    #"--max-asyncio-tasks=1",  # Solo 1 tarea asíncrona a la vez
    "--verbose",  # Opcional: muestra más detalles
    "--tb=short", # Opcional: formato de tracebacks
]
pythonpath = ["."]

[project.scripts]
hexa = "hexa.__main__:cmd"
